--- a/ExpressJS/be_cyber_media/package.json
+++ b/ExpressJS/be_cyber_media/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
     "prisma": "^5.21.1",
