--- a/ExpressJS/be_cyber_media/package.json
+++ b/ExpressJS/be_cyber_media/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --watch",
     "start": "nodemon server.js",
     "reload": "node --watch server.js"
   },
@@ -16,11 +16,16 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
     "prisma": "^5.21.1",
-    "sequelize": "^6.37.4"
+    "sequelize": "^6.37.4",
+    "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "@types/swagger-ui-express": "^4.1.7"
   }
 }
