--- a/ExpressJS/be_cyber_media/package.json
+++ b/ExpressJS/be_cyber_media/package.json
@@ -20,12 +20,15 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "prisma": "^5.21.1",
     "sequelize": "^6.37.4",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.16",
     "@types/swagger-ui-express": "^4.1.7"
   }
 }
