--- a/ExpressJS/be_cyber_media/package.json
+++ b/ExpressJS/be_cyber_media/package.json
@@ -14,15 +14,21 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "graphql": "^16.9.0",
+    "graphql-http": "^1.22.2",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "prisma": "^5.21.1",
+    "ruru": "^2.0.0-beta.13",
     "sequelize": "^6.37.4",
     "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1"
