--- a/ExpressJS/be_cyber_media/package.json
+++ b/ExpressJS/be_cyber_media/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
